# GameBackbone_ProjectTemplate

./: .gitignore
ProjectTemplateLib/: CMakeLists.txt
ProjectTemplateLib/include/ProjectTemplate/Core/: EventController.h  TemplateRegion.h
ProjectTemplateLib/source/Core/: EventController.cpp  TemplateRegion.cpp
ProjectTemplateSln/: CMakeLists.txt  CMakeSettings.json
ProjectTemplateSln/ProjectTemplateExe/source/: main.cpp
ProjectTemplateSln/ProjectTemplateLib/: CMakeLists.txt
ProjectTemplateSln/ProjectTemplateLib/include/ProjectTemplate/Core/: EventController.h
ProjectTemplateSln/ProjectTemplateLib/source/: ProjectTemplate.cpp
ProjectTemplateSln/ProjectTemplateLib/source/Core/: EventController.cpp
